--- a/localizations/en_US.json
+++ b/localizations/en_US.json
@@ -1,71 +1,71 @@
 {
-  "ABOUT": "About",
-  "ABOUT_HARMONOID": "About Harmonoid",
+  "ABOUT": "Derbar",
+  "ABOUT_HARMONOID": "Derbarê Harmonoid",
   "ADD": "Add",
-  "ADDED_ENTRY_TO_PLAYLIST": "Added \"\"ENTRY\"\" to \"\"PLAYLIST\"\"",
+  "ADDED_ENTRY_TO_PLAYLIST": "\"\"ENTRY\"\" bo \"\"PLAYLIST\"\"hat tevlîkirin",
   "ADDED_FOLDERS": "Added folders:",
-  "ADDED_M_OF_N_FILES": "Added \"M\" of \"N\" files...",
-  "ADDING_YOUR_MUSIC": "Adding your music...",
-  "ADD_NEW_FOLDER": "Add new folder",
-  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder into the media library",
-  "ADD_PLAYLIST_TO_NOW_PLAYING": "Add playlist to now playing",
-  "ADD_THIS_FOLDER": "Add this folder",
-  "ADD_TO_NOW_PLAYING": "Add to now playing",
-  "ADD_TO_PLAYLIST": "Add to playlist",
-  "ALBUM": "Album",
+  "ADDED_M_OF_N_FILES": "\"M\" ji \"N\" tevlî pelan bû...",
+  "ADDING_YOUR_MUSIC": "muzîkê te tê tevlîkirin...",
+  "ADD_NEW_FOLDER": "Peldanka nû tevlî bike",
+  "ADD_NEW_FOLDER_SUBTITLE": "Peldankek nû tevlî pirtûkxaneya medyayê bû",
+  "ADD_PLAYLIST_TO_NOW_PLAYING": "Lîsteya lîstin tevlî lîsteya niha lê tê lêdan bike.",
+  "ADD_THIS_FOLDER": "Vê peldankê tevlî bike",
+  "ADD_TO_NOW_PLAYING": "Tevlî niha tê lîstin bike",
+  "ADD_TO_PLAYLIST": "Tevlî lîsteya lîstinê bike",
+  "ALBUM": "Elbum",
   "ALBUMS": "Albums",
-  "ALBUM_ARTIST": "Album artist",
-  "ALBUM_ARTISTS": "Album artists",
-  "ALL_FILES": "All files",
-  "ANIMATION_SPEED": "Animation speed:",
-  "ARTIST": "Artist",
-  "ARTISTS": "Artists",
-  "ASCENDING": "Ascending",
-  "AVAILABLE_STORAGES": "Available storages",
-  "A_TO_Z": "A to Z",
-  "BACK": "Back",
+  "ALBUM_ARTIST": "Hunermenda elbumê",
+  "ALBUM_ARTISTS": "Hunermenên elbumê",
+  "ALL_FILES": "Hemû pel",
+  "ANIMATION_SPEED": "Leza anîmasyonê:",
+  "ARTIST": "Hunermend",
+  "ARTISTS": "Hunermend",
+  "ASCENDING": "Berjor",
+  "AVAILABLE_STORAGES": "Bîrdankên heyî",
+  "A_TO_Z": "A heya Z",
+  "BACK": "Vegere",
   "BETA": "Beta",
-  "BUFFERING": "Buffering...",
-  "CANCEL": "Cancel",
-  "CENTER": "Center",
-  "CLEAR_LRC_FILE": "Clear selected LRC file",
-  "CLEAR_SELECTION": "Clear selection",
-  "COMING_UP": "Coming up",
-  "CONNECT": "Connect",
-  "CONNECTED": "Connected",
-  "CONTROL_PANEL": "Control panel",
-  "COPY_AS_JSON": "Copy as JSON",
-  "COPY_LINK": "Copy link",
-  "CORRUPT_LRC_FILE": "Selected LRC file is corrupt. Please verify the file & try again.",
-  "COUNT": "Count",
-  "CREATE": "Create",
-  "CREATE_NEW_PLAYLIST": "Create new playlist",
+  "BUFFERING": "...",
+  "CANCEL": "Têk bibe",
+  "CENTER": "Navend",
+  "CLEAR_LRC_FILE": "Pela ya LRC hilbijartî pak bike",
+  "CLEAR_SELECTION": "Hilbijartinê pak bike",
+  "COMING_UP": "Strana pêş",
+  "CONNECT": "girê bide",
+  "CONNECTED": "Hat girêdan",
+  "CONTROL_PANEL": "Destgeha kontrolê",
+  "COPY_AS_JSON": "Wekî JSON jê bigire",
+  "COPY_LINK": "Girêdanê jê bigire",
+  "CORRUPT_LRC_FILE": "Pela LRC a hilbijartî xerab e. Tika pelê biperjîne & dîsa binêre.",
+  "COUNT": "Jimar",
+  "CREATE": "Biafrîne",
+  "CREATE_NEW_PLAYLIST": "Lîsteyeke nû ya lîstinê biafrîne",
   "CROSSFADE": "Crossfade",
-  "CROSSFADE_BETWEEN_TRACKS": "Crossfade between tracks",
-  "CROSSFADE_DURATION": "Crossfade duration:",
-  "CROSSFADE_EXCLUSIVE_AUDIO_ERROR": "Exclusive audio is not supported with crossfade",
-  "DATE_ADDED": "Date added",
-  "DEFAULT": "Default",
+  "CROSSFADE_BETWEEN_TRACKS": "Crossfade di nav stranan de",
+  "CROSSFADE_DURATION": "Dirêjahiya Crossfade:",
+  "CROSSFADE_EXCLUSIVE_AUDIO_ERROR": "Dengê taybet bi crossfade re nayê piştgirîkirin",
+  "DATE_ADDED": "Dîroka tevlîbûnê",
+  "DEFAULT": "Berdest",
   "DELETE": "Delete",
-  "DESCENDING": "Descending",
-  "DEVELOPER": "Developer",
-  "DISCONNECT": "Disconnect",
-  "DISCOVERING_FILES": "Discovering files...",
-  "DISPLAY_ARTIST_IMAGES": "Display artist images",
-  "DISPLAY_AUDIO_FORMAT": "Display audio format",
-  "DISPLAY_PROGRESS_ON_TASKBAR": "Display progress on taskbar",
-  "DISPLAY_UPON_PLAYBACK": "Display upon playback",
-  "DISPLAY_VOLUME_SLIDER": "Display volume slider",
-  "DONE": "Done",
-  "EDIT": "Edit",
+  "DESCENDING": "Berjêr",
+  "DEVELOPER": "Pêşvebir",
+  "DISCONNECT": "Girê nede",
+  "DISCOVERING_FILES": "Pelan vekolîne...",
+  "DISPLAY_ARTIST_IMAGES": "Wêneyên hunermendan nîşan bide",
+  "DISPLAY_AUDIO_FORMAT": "Formata dengî nîşan bide",
+  "DISPLAY_PROGRESS_ON_TASKBAR": "Pêşveçûnê li ser darika encamê nîşan bide",
+  "DISPLAY_UPON_PLAYBACK": "Dema lîstinê nîşan bide",
+  "DISPLAY_VOLUME_SLIDER": "Şemtokê dengê nîşan bide",
+  "DONE": "Qediya",
+  "EDIT": "Biguherîne",
   "EDIT_ALBUM_PARAMETERS_SUBTITLE": "Edit parameters used to uniquely identify an album",
-  "EDIT_ALBUM_PARAMETERS_TITLE": "Edit album parameters",
-  "EDIT_DETAILS": "Edit details",
-  "EDIT_MINIMUM_FILE_SIZE": "Edit minimum file size",
-  "EDIT_TAGS": "Edit tags",
-  "EMAIL": "Email",
-  "ENABLE_ANIMATION_EFFECTS": "Enable animation effects",
-  "ENABLE_DISCORD_RPC": "Enable Discord RPC",
+  "EDIT_ALBUM_PARAMETERS_TITLE": "Parametreyên albûmê biguherîne",
+  "EDIT_DETAILS": "Hûrguliyan biguherîne",
+  "EDIT_MINIMUM_FILE_SIZE": "Mezinahiya pelê ya herî kêm biguherîne",
+  "EDIT_TAGS": "Etîketan biguherîne",
+  "EMAIL": "Ename",
+  "ENABLE_ANIMATION_EFFECTS": "Bandorên anîmasyonê çalak bike",
+  "ENABLE_DISCORD_RPC": "Discord RPC çalak bike",
   "ENABLE_NOTIFICATION_LYRICS": "Enable notification lyrics",
   "ENABLE_NOW_PLAYING_RIPPLE_EFFECT": "Enable \"Now playing screen\" ripple effect",
   "END": "End",
